dataset1235/2025-2/1153765216/users/3635356750/executions/2747719322_1626817775.log
== SUBMISSION (2025-08-26 01:04:36)
-- CODE: 
import math
r= float(input())
area_circulo= math.pi * r **2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.280
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:42:57)
-- CODE: 
import math
r = flout(input())
area_circula = math.pi * r ** 2
volume_esfera = (4/3) * math.pi * r ** 3
print(f"{area_circula:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:02:59)
-- CODE: 
impot math
r= float(input())
area_circulo= math.pi * r **2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f}")
print(f"{valome_esfer:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:46:03)
-- CODE: 
import math
r = flout(input())
area_circula = math.pi * r ** 2
volume_esfera = (4/3) * math.pi * r ** 3

print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:46:20)
-- CODE: 
import math
r = flout(input())
area_circulo = math.pi * r ** 2
volume_esfera = (4/3) * math.pi * r ** 3

print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:02:15)
-- CODE: 
impot math
r= float(input())
area_circulo= math.pi * r **2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f}")
print(f"{valome_esfer:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:03:26)
-- CODE: 
import math
r= float(input())
area_circulo= math.pi * r **2
volume_esfera = (4/3) * math.pi *r **3
print(round(area_circulo,3))
print(round(volume_esfera,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:03:25)
-- CODE: 
import math
r= float(input())
area_circulo= math.pi * r **2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f}")
print(f"{valome_esfer:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"{valome_esfer:.3f}")
             ^^^^^^^^^^^^
NameError: name 'valome_esfer' is not defined. Did you mean: 'volume_esfera'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"{valome_esfer:.3f}")
             ^^^^^^^^^^^^
NameError: name 'valome_esfer' is not defined. Did you mean: 'volume_esfera'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"{valome_esfer:.3f}")
             ^^^^^^^^^^^^
NameError: name 'valome_esfer' is not defined. Did you mean: 'volume_esfera'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"{valome_esfer:.3f}")
             ^^^^^^^^^^^^
NameError: name 'valome_esfer' is not defined. Did you mean: 'volume_esfera'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"{valome_esfer:.3f}")
             ^^^^^^^^^^^^
NameError: name 'valome_esfer' is not defined. Did you mean: 'volume_esfera'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"{valome_esfer:.3f}")
             ^^^^^^^^^^^^
NameError: name 'valome_esfer' is not defined. Did you mean: 'volume_esfera'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:44:13)
-- CODE: 
import math
r = flout(input())
area_circula = math.pi * r ** 2
volume_esfera = (4/3) * math.pi * r ** 3
print(f"{area_circula:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:48:54)
-- CODE: 
import math
r = float(input())
area_circulo = math.pi * r ** 2
volume_esfera = (4/3) * math.pi * r ** 3

print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.280
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:46:21)
-- CODE: 
import math
r = flout(input())
area_circulo = math.pi * r ** 2
volume_esfera = (4/3) * math.pi * r ** 3

print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r = flout(input())
        ^^^^^
NameError: name 'flout' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
